Test_files/invalidTestCases/div0.avm
push int16(0)
push int32(0)
div
exit